# stlt-market-matrix

./: .gitignore  dockerfile  pyproject.toml  requirements.txt  streamlit_app.py
data/: ^GSPC - Return Calc.csv  ^GSPC - Return Calc.xlsx  ^GSPC - Return Calc.xlsx.csv  ^GSPC.csv  ^GSPC_update.csv  data sources.txt  inx_daily_historical-data-09-12-2024.csv  spx_daily_historical-data-09-12-2024.csv  us_inflation.csv
pages/: main.py  marketmatrix.py
src/stlt_market_matrix/: __init__.py
