[project]
name = "stlt-market-matrix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.38.0",
    "seaborn>=0.13.2",
    "plotly>=5.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
